--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -1,10 +1,20 @@
 "Credit Card","クレジットカード"
 Konbini,コンビニ
+"Payment successfully received in the amount of: %1 %2","次の金額の支払いを受け取りました: %1 %2"
+"Received payment authorization for type: %1. Payment deadline is: %2","タイプの支払い承認を受け取りました: %1. お支払い期限は: %2"
+"Payment was not received before expiry time","有効期限が切れる前に支払いが受領されなかった"
+"Received cancellation notice from Komoju","Komojuからキャンセルのお知らせを受け取りました"
+"Payment failed","支払いが失敗しました"
+"Order has been fully refunded.","注文は全額返金されました"
+"Refund for order created. Amount: %1 %2","作成した注文の払い戻し。量: %1 %2"
+"Unknown event type: %1","不明なイベントタイプ: %1"
+"Komoju External Order ID: %1 %2","Komoju 外部注文ID: %1 %2"
 "Payment Type","払いの種類"
 "Place Order","注文する"
 Komoju,Komoju
 "Allows payments by Komoju, dedicated to Japanese online and offline payment gateways.","日本のオンラインおよびオフライン決済ゲートウェイに特化した、Komojuによる決済を可能にします。"
 "Enable this Solution","このソリューションを有効にする"
+"This plugin can only work if the store's base currency is one of: JPY","このプラグインは、ストアの基本通貨が次のいずれかである場合にのみ機能します: JPY"
 "Enable debug mode","デバッグモードを有効にする"
 "API Settings","API設定"
 "Komoju merchant ID","Komoju 商人ID"
