Add a comment to Webhook field with the URL
There's currently no indication to the store admins what the webhook URL
would be, which is required to create a webhook in the Komoju dashboard,
so I'm adding a comment underneath the webhook secret token config field
with the path. I'd love to be able to display the full path of the
webhook, but the config is in XML, and as far as I'm aware, we can't
programmatically insert data into it.

--- a/src/app/code/Komoju/Payments/i18n/en_US.csv
+++ b/src/app/code/Komoju/Payments/i18n/en_US.csv
@@ -20,6 +20,7 @@ KOMOJU,KOMOJU
 "Komoju merchant ID","Komoju merchant ID"
 "Secret Key from Komoju","Secret Key from Komoju"
 "Webhook Secret Token","Webhook Secret Token"
+"The webhook URL will be at /komoju/hostedpage/webhook of this site","The webhook URL will be at /komoju/hostedpage/webhook of this site"
 "Payment Methods","Payment Methods"
 "Allow credit card payments","Allow credit card payments"
 "Allow konbini payments","Allow konbini payments"
