Improve Japanese translations
A native Japanese speaker has reviewed the Google translated strings and
fixed some of them to read as more natural.

--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -1,21 +1,21 @@
 "Credit Card","クレジットカード"
 Konbini,コンビニ
-"Komoju Payments JSON Decoding Failure. Error: %1","Komoju Payments JSONデコードの失敗. エラー: %1"
-"Store currency code: %1 is not in the list of allowable currency codes for Komoju","店舗通貨コード: %1 Komojuで使用できる通貨コードのリストにない"
-"Payment successfully received in the amount of: %1 %2","次の金額の支払いを受け取りました: %1 %2"
-"Received payment authorization for type: %1. Payment deadline is: %2","タイプの支払い承認を受け取りました: %1. お支払い期限は: %2"
-"Payment was not received before expiry time","有効期限が切れる前に支払いが受領されなかった"
-"Received cancellation notice from Komoju","Komojuからキャンセルのお知らせを受け取りました"
-"Order has been fully refunded.","注文は全額返金されました"
-"Refund for order created. Amount: %1 %2","作成した注文の払い戻し。量: %1 %2"
+"Komoju Payments JSON Decoding Failure. Error: %1","KOMOJU Payments JSONデコードの失敗. エラー: %1"
+"Store currency code: %1 is not in the list of allowable currency codes for KOMOJU","店舗通貨コード: %1 KOMOJUで使用できる通貨コードではありません"
+"Payment successfully received in the amount of: %1 %2","金額の支払いを受け取りました: %1 %2"
+"Received payment authorization for type: %1. Payment deadline is: %2","支払い承認を受け取りました: %1. 支払い期限: %2"
+"Payment was not received before expiry time","有効期間内に支払いがありませんでした"
+"Received cancellation notice from Komoju","KOMOJUからキャンセルのお知らせを受け取りました"
+"Order has been fully refunded.","全額返金されました"
+"Refund for order created. Amount: %1 %2","払い戻しが作成されました。金額: %1 %2"
 "Unknown event type: %1","不明なイベントタイプ: %1"
-"Komoju External Order ID: %1 %2","Komoju 外部注文ID: %1 %2"
-"Payment Type","払いの種類"
-"Place Order","注文する"
+"Komoju External Order ID: %1 %2","KOMOJU 外部注文ID: %1 %2"
+"Payment Type","支払いの種類"
+"Place Order","注文"
 KOMOJU,KOMOJU
-"Accept Japanese payments with KOMOJU","KOMOJUで日本の支払いを受け入れる"
-"Enable this Solution","このソリューションを有効にする"
-"This plugin can only work if the store's base currency is one of: JPY","このプラグインは、ストアの基本通貨が次のいずれかである場合にのみ機能します: JPY"
+"Accept Japanese payments with KOMOJU","KOMOJUで決済"
+"Enable this Solution","この方法を有効にする"
+"This plugin can only work if the store's base currency is one of: JPY","このプラグインは、ストアの通貨が次のいずれかである場合にのみ機能します: JPY"
 "API Settings","API設定"
 "Merchant UUID","マーチャントUUID"
 "Secret Key","秘密鍵"
@@ -24,5 +24,5 @@ KOMOJU,KOMOJU
 "Payment Methods","お支払い方法"
 "Allow credit card payments","クレジットカード決済を許可する"
 "Allow konbini payments","コンビニ支払いを許可する"
-"Checkout Settings","チェックアウト設定"
+"Checkout Settings","決済設定"
 Title,題名
