Update dictionary files with new wording

--- a/src/app/code/Komoju/Payments/i18n/en_US.csv
+++ b/src/app/code/Komoju/Payments/i18n/en_US.csv
@@ -17,9 +17,9 @@ KOMOJU,KOMOJU
 "Enable this Solution","Enable this Solution"
 "This plugin can only work if the store's base currency is one of: JPY","This plugin can only work if the store's base currency is one of: JPY"
 "API Settings","API Settings"
-"Komoju merchant ID","Komoju merchant ID"
-"Secret Key from Komoju","Secret Key from Komoju"
-"Webhook Secret Token","Webhook Secret Token"
+"Merchant UUID","Merchant UUID"
+"Secret Key","Secret Key"
+"Webhook Secret","Webhook Secret"
 "The webhook URL will be at /komoju/hostedpage/webhook of this site","The webhook URL will be at /komoju/hostedpage/webhook of this site"
 "Payment Methods","Payment Methods"
 "Allow credit card payments","Allow credit card payments"
