--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -17,9 +17,9 @@ KOMOJU,KOMOJU
 "Enable this Solution","このソリューションを有効にする"
 "This plugin can only work if the store's base currency is one of: JPY","このプラグインは、ストアの基本通貨が次のいずれかである場合にのみ機能します: JPY"
 "API Settings","API設定"
-"Komoju merchant ID","Komoju 商人ID"
-"Secret Key from Komoju","Komojuの秘密鍵"
-"Webhook Secret Token","Webhookシークレットトークン"
+"Merchant UUID","マーチャントUUID"
+"Secret Key","秘密鍵"
+"Webhook Secret","Webhookシークレット"
 "The webhook URL will be at /komoju/hostedpage/webhook of this site","webhook URLは、このサイトの/ komoju / hostedpage / webhookにあります"
 "Payment Methods","お支払い方法"
 "Allow credit card payments","クレジットカード決済を許可する"
