Update language dictionaries
Update the language dictionaries to reflect the Komoju to KOMOJU
change.

--- a/src/app/code/Komoju/Payments/i18n/en_US.csv
+++ b/src/app/code/Komoju/Payments/i18n/en_US.csv
@@ -1,15 +1,15 @@
 "Credit Card","Credit Card"
 Konbini,Konbini
-"Komoju Payments JSON Decoding Failure. Error: %1","Komoju Payments JSON Decoding Failure. Error: %1"
-"Store currency code: %1 is not in the list of allowable currency codes for Komoju","Store currency code: %1 is not in the list of allowable currency codes for Komoju"
+"KOMOJU Payments JSON Decoding Failure. Error: %1","KOMOJU Payments JSON Decoding Failure. Error: %1"
+"Store currency code: %1 is not in the list of allowable currency codes for KOMOJU","Store currency code: %1 is not in the list of allowable currency codes for KOMOJU"
 "Payment successfully received in the amount of: %1 %2","Payment successfully received in the amount of: %1 %2"
 "Received payment authorization for type: %1. Payment deadline is: %2","Received payment authorization for type: %1. Payment deadline is: %2"
 "Payment was not received before expiry time","Payment was not received before expiry time"
-"Received cancellation notice from Komoju","Received cancellation notice from Komoju"
+"Received cancellation notice from KOMOJU","Received cancellation notice from KOMOJU"
 "Order has been fully refunded.","Order has been fully refunded."
 "Refund for order created. Amount: %1 %2","Refund for order created. Amount: %1 %2"
 "Unknown event type: %1","Unknown event type: %1"
-"Komoju External Order ID: %1 %2","Komoju External Order ID: %1 %2"
+"KOMOJU External Order ID: %1 %2","KOMOJU External Order ID: %1 %2"
 "Payment Type","Payment Type"
 "Place Order","Place Order"
 KOMOJU,KOMOJU
