--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -1,15 +1,15 @@
 "Credit Card","クレジットカード"
 Konbini,コンビニ
-"Komoju Payments JSON Decoding Failure. Error: %1","KOMOJU Payments JSONデコードの失敗. エラー: %1"
+"KOMOJU Payments JSON Decoding Failure. Error: %1","KOMOJU Payments JSONデコードの失敗. エラー: %1"
 "Store currency code: %1 is not in the list of allowable currency codes for KOMOJU","店舗通貨コード: %1 KOMOJUで使用できる通貨コードではありません"
 "Payment successfully received in the amount of: %1 %2","金額の支払いを受け取りました: %1 %2"
 "Received payment authorization for type: %1. Payment deadline is: %2","支払い承認を受け取りました: %1. 支払い期限: %2"
 "Payment was not received before expiry time","有効期間内に支払いがありませんでした"
-"Received cancellation notice from Komoju","KOMOJUからキャンセルのお知らせを受け取りました"
+"Received cancellation notice from KOMOJU","KOMOJUからキャンセルのお知らせを受け取りました"
 "Order has been fully refunded.","全額返金されました"
 "Refund for order created. Amount: %1 %2","払い戻しが作成されました。金額: %1 %2"
 "Unknown event type: %1","不明なイベントタイプ: %1"
-"Komoju External Order ID: %1 %2","KOMOJU 外部注文ID: %1 %2"
+"KOMOJU External Order ID: %1 %2","KOMOJU 外部注文ID: %1 %2"
 "Payment Type","支払いの種類"
 "Place Order","注文"
 KOMOJU,KOMOJU
