translate komoju communication error message

--- a/src/app/code/Komoju/Payments/i18n/en_US.csv
+++ b/src/app/code/Komoju/Payments/i18n/en_US.csv
@@ -24,3 +24,4 @@ KOMOJU,KOMOJU
 "Payment Methods","Payment Methods"
 "Checkout Settings","Checkout Settings"
 Title,Title
+"Encountered an issue communicating with KOMOJU. Please wait a moment and try again.","Encountered an issue communicating with KOMOJU. Please wait a moment and try again."
