--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -25,6 +25,6 @@ KOMOJU,KOMOJU
 "Checkout Settings","決済設定"
 Title,題名
 "This plugin can only work if the store's base currency is one of: JPY","This plugin can only work if the store's base currency is one of: JPY"
-"Encountered an issue communicating with KOMOJU. Please wait a moment and try again.","KOMOJUを読み込みませんでした。しばらく待ってから再実行してください。"
+"Encountered an issue communicating with KOMOJU. Please wait a moment and try again.","KOMOJUとの通信に問題が発生しました。しばらく待ってから再実行してください。"
 "Show Title at Checkout","チェックアウトでタイトルを表示"
 "Display the title above the payment methods on the checkout page","チェックアウトページの支払い方法の上にタイトルを表示"
