--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -24,7 +24,7 @@ KOMOJU,KOMOJU
 "Payment Methods","お支払い方法"
 "Checkout Settings","決済設定"
 Title,題名
-"This plugin can only work if the store's base currency is one of: JPY","This plugin can only work if the store's base currency is one of: JPY"
+"This plugin can only work if the store's base currency is one of: JPY","このプラグインは、ストアの基本通貨が日本円の場合にのみ動作します。"
 "Encountered an issue communicating with KOMOJU. Please wait a moment and try again.","KOMOJUとの通信に問題が発生しました。しばらく待ってから再実行してください。"
 "Show Title at Checkout","チェックアウトでタイトルを表示"
 "Display the title above the payment methods on the checkout page","チェックアウトページの支払い方法の上にタイトルを表示"
