--- a/src/app/code/Komoju/Payments/i18n/ja_JP.csv
+++ b/src/app/code/Komoju/Payments/i18n/ja_JP.csv
@@ -9,7 +9,8 @@ Konbini,コンビニ
 "Order has been fully refunded.","全額返金されました"
 "Refund for order created. Amount: %1 %2","払い戻しが作成されました。金額: %1 %2"
 "Unknown event type: %1","不明なイベントタイプ: %1"
-"KOMOJU External Order ID: %1 %2","KOMOJU 外部注文ID: %1 %2"
+"KOMOJU - %1", "KOMOJU - %1"
+"External Order ID: %1 %2","外部注文ID: %1 %2"
 "Payment Type","支払いの種類"
 "Place Order","注文"
 KOMOJU,KOMOJU
@@ -28,3 +29,19 @@ Title,題名
 "Encountered an issue communicating with KOMOJU. Please wait a moment and try again.","KOMOJUとの通信に問題が発生しました。しばらく待ってから再実行してください。"
 "Show Title at Checkout","チェックアウトでタイトルを表示"
 "Display the title above the payment methods on the checkout page","チェックアウトページの支払い方法の上にタイトルを表示"
+
+payment_method,translation
+"credit_card","クレジットカード決済"
+"paypay","PayPay"
+"linepay","Line Pay"
+"merpay","メルペイ"
+"rakutenpay","楽天ペイ"
+"paidy","ペイディ(Paidy)"
+"konbini","コンビニ決済"
+"bank_transfer","銀行振込"
+"pay_easy","Pay Easy"
+"web_money","Web Money"
+"bit_cash","Bit Cash"
+"net_cash","Net Cash"
+"alipay","Ali Pay"
+"aupay","au Pay"
